--- a/src/css/global.css
+++ b/src/css/global.css
@@ -4,3 +4,16 @@ html,body,
   margin: 0;
   padding: 0;
 }
+
+.el-breadcrumb{
+  margin-bottom: 15px;
+}
+.el-form-item.is-success .el-input__inner, .el-form-item.is-success .el-input__inner:focus, .el-form-item.is-success .el-textarea__inner, .el-form-item.is-success .el-textarea__inner:focus {
+  border-color:#67C23A
+}
+.el-form-item.is-success .el-input-group__append .el-input__inner, .el-form-item.is-success .el-input-group__prepend .el-input__inner {
+  border-color:transparent
+}
+.el-form-item.is-success .el-input__validateIcon {
+  color:#67C23A
+}
